--- a/scalus-site/content/language-guide/support.mdx
+++ b/scalus-site/content/language-guide/support.mdx
@@ -33,13 +33,14 @@ Below is a comprehensive list of what Scala features are currently supported in 
 
 ## Scala features that are not supported
 
-* `var`s and `lazy val`s
-* `while` loops
+* `var`s and `lazy val`s - use immutable `val` declarations instead
+* `while` loops - use recursion or higher-order functions like `fold`
 * classes, inheritance and polymorphism aka virtual dispatch
-    * you can't use `isInstanceOf`
-* pattern matching with guards
-* pattern matching on multiple constructors (`case A | B => ...`)
-* pattern matching using type ascriptions (`case x: BigInt => ...`)
-* `try-catch` expressions
-* overloaded functions
-* mutually recursive functions
+    * you can't use `isInstanceOf` or runtime type checks
+    * use sealed traits with enums or case classes for polymorphic data
+* pattern matching with guards - move guard conditions to the right-hand side with `if-then-else`
+* pattern matching on multiple constructors (`case A | B => ...`) - use separate cases
+* pattern matching using type ascriptions (`case x: BigInt => ...`) - pattern match on structure instead
+* `try-catch` expressions - use `Option`, `Either`, or error handling patterns instead
+* overloaded functions - each function must have a unique name
+* mutually recursive functions - functions cannot call each other recursively
